@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-18T01:22:26Z",
+  "timestamp" : "2022-11-18T08:18:54Z",
   "count_outdated" : 666,
   "uniques_outdated" : 379,
-  "count" : 686,
-  "uniques" : 387,
+  "count" : 687,
+  "uniques" : 388,
   "clones" : [
     {
       "timestamp": "2022-11-05T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-11-17T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
