@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 21,
   "uniques": 4,
   "clones": [
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-11-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
