@@ -1,3 +1,11 @@
+2022-11-18T08:18:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3495281697 # 1039
+* notice: last 14d: unq all: 4 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 379 666 / 387 686
+* notice: next accum: outdated-unq outdated-all / unq all: 379 666 / 388 687
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-18]
+
 2022-11-18T01:22:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3493386898 # 1038
 * notice: last 14d: unq all: 4 20
